# blackini

./: .deepsource.toml  .gitignore  blackini  pyproject.toml  setup.py  tox.ini
blackini/: __init__.py  __main__.py
tests/: test_blackini.py
