[tool.poetry]
name = "blackini"
version = "0.1.0"
description = ""
authors = ["Pablo Woolvett <pablowoolvett@gmail.com>"]

[tool.poetry.scripts]
  blackini = "blackini.__main__:main"

[tool.poetry.dependencies]
python = "^3.6"
black = { version = "*", allows-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
